fix video on mobile

--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -340,7 +340,7 @@ strong {
   top: 0;
   left: 0;
   max-width: 100%; 
-  height: auto;
+  height: 100%;
 }
 
 
